Added secret-manager package

--- a/services/cannon/src/index.html
+++ b/services/cannon/src/index.html
@@ -473,12 +473,12 @@
                     </div>
                 </div>
                 <div class="game-card">
-                    <div class="game-img" style="background-color: #60e0c0;"></div>
+                    <div class="game-img" style="background-image: url('https://i.postimg.cc/kgNqPQjc/Whats-App-Image-2025-05-02-at-21-44-00.jpg'); background-size: cover;"></div>
                     <div class="game-content">
-                        <h3>Mystery Manor</h3>
-                        <p>Solve puzzles and uncover secrets in this immersive detective adventure game.</p>
-                        <span class="game-tag">Mystery</span>
-                        <span class="game-tag">Puzzle</span>
+                        <h3>Cannon Impact Trials</h3>
+                        <p>Hit Crates, Target Dummies, Wall Bricks, Toy Zombies, Confused Tanks, and much more.</p>
+                        <span class="game-tag">Action</span>
+                        <span class="game-tag">Zombies</span>
                     </div>
                 </div>
             </div>
