Expose assets folder

--- a/services/cannon/src/index.html
+++ b/services/cannon/src/index.html
@@ -473,7 +473,7 @@
                     </div>
                 </div>
                 <div class="game-card">
-                    <div class="game-img" style="background-image: url('https://i.postimg.cc/kgNqPQjc/Whats-App-Image-2025-05-02-at-21-44-00.jpg'); background-size: cover;"></div>
+                    <div class="game-img" style="background-image: url('assets/cannon.jpeg'); background-size: cover;"></div>
                     <div class="game-content">
                         <h3>Cannon Impact Trials</h3>
                         <p>Hit Crates, Target Dummies, Wall Bricks, Toy Zombies, Confused Tanks, and much more.</p>
