added another image and changed some texts with cursor

--- a/services/cannon/src/index.html
+++ b/services/cannon/src/index.html
@@ -464,10 +464,10 @@
                     </div>
                 </div>
                 <div class="game-card">
-                    <div class="game-img" style="background-color: #60a9f0;"></div>
+                    <div class="game-img" style="background-image: url('assets/mergemon.png'); background-size: cover;"></div>
                     <div class="game-content">
-                        <h3>Pixel Warriors</h3>
-                        <p>Battle in a retro-style arena with friends in this action-packed multiplayer game.</p>
+                        <h3>Mergemons Explore</h3>
+                        <p>The Best Merge game on the market, its a Merge Game with Slot delivery of Items.</p>
                         <span class="game-tag">Action</span>
                         <span class="game-tag">Multiplayer</span>
                     </div>
@@ -598,8 +598,8 @@
                     <h3>Games</h3>
                     <ul>
                         <li><a href="#">Cosmic Voyager</a></li>
-                        <li><a href="#">Pixel Warriors</a></li>
-                        <li><a href="#">Mystery Manor</a></li>
+                        <li><a href="#">Mergemons Explore</a></li>
+                        <li><a href="#">Cannon Impact Trials</a></li>
                         <li><a href="#">All Games</a></li>
                     </ul>
                 </div>
