--- a/services/whatsapp/src/websites/lumo.html
+++ b/services/whatsapp/src/websites/lumo.html
@@ -450,8 +450,11 @@
         }
 
         .nav-container {
-          flex-direction: column;
-          gap: 15px;
+          justify-content: center;
+        }
+
+        .whatsapp-btn {
+          display: none;
         }
 
         .header {
@@ -459,13 +462,13 @@
         }
 
         .hero {
-          padding-top: 120px;
+          padding-top: 100px;
         }
       }
     </style>
   </head>
   <body>
-    <div class="header" style="background: rgba(255, 255, 255, 0.95)">
+    <div class="header" style="background: rgba(255, 255, 255, 0.98)">
       <div class="nav-container">
         <div class="logo">
           <div class="logo-icon">🤖</div>
